--- a/plugin_config.ini
+++ b/plugin_config.ini
@@ -4,3 +4,4 @@ jboss|jboss_crackpass,jboss_unrce,jboss_info,jboss_head_getshell
 axis|axis_crackpass,axis_config_read,axis_info
 glassfish|glassfish_crackpass,glassfish_crackpass1,glassfish_fileread
 resin|resin_crackpass,resin_fileread,resin_fileread2,resin_fileread3,resin_fileread4,resin_fileread5
+rsync|socket|none|rsyncd
