socket第三个值为none

--- a/discern_config.ini
+++ b/discern_config.ini
@@ -8,4 +8,4 @@ glassfish|file|resource/js/cj.js|glassfish.dev.java.net
 glassfish|header|Server|GlassFish
 resin|header|server|resin
 tomcat|file|is_test|Apache Tomcat
-rsync|rsync_anonymous_access
+rsync|socket|none|rsyncd
